--- a/styles.css
+++ b/styles.css
@@ -41,3 +41,9 @@ h3 {
 .btn:hover {
   background: #0056b3;
 }
+
+.leaflet-popup-content {
+  width: 500px !important; /* Adjust the width as needed */
+  margin: 10;
+  padding: 0;
+}
