--- a/styles.css
+++ b/styles.css
@@ -47,3 +47,12 @@ h3 {
   margin: 10;
   padding: 0;
 }
+
+.slider-container {
+  margin: 10px;
+}
+
+label {
+  display: block;
+  margin-top: 10px;
+}
